--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,10 @@
   margin-top: 80px;
   margin-left: 30px;
 }
+.imgWrapper{
+  display: flex;
+  gap: 50px;
+}
 .imageFrame{
   height: 270px;
   width: 410px;
