--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,8 @@
 @media screen and (max-width:700px) {
   .wrapper{
     width: 100%;
+    height: 100%;
+    padding-bottom: 150px;
     margin: 0 auto;
   }
   .header{
@@ -175,5 +177,9 @@
     margin-right: auto;
     justify-content: center;
     flex-direction: column;
+  }
+  .imgWrapper{
+    flex-direction: column;
+    align-items: center;
   }
 }
