--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,8 @@
 }
 .wrapper{
   background: hsl(0, 0%, 0%);
-  height: 200vh;
+  height: 100%;
+  padding-bottom: 150px;
   color: #FFFFFF;
   width: 100%;
 }
