--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fuggles&family=Mooli&family=Ubuntu:ital,wght@0,400;0,500;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
 *{
   margin: 0;
@@ -35,11 +36,31 @@
   width: 100%;
 }
 .header{
+  position: relative;
   width: 100%;
   display: flex;
   align-items: start;
   padding: 50px;
   flex-direction: column;
+}
+.resume{
+  font-family: 'Dancing Script', cursive;
+  font-size: 30px;
+  position: absolute;
+  top: 60px;
+  right: 10%;
+  border: 1px solid #FFFFFF;
+  background: #000000;
+  height: 50px;
+  width: 100px;
+  border-radius: 10px;
+  transition: all .3s ease;
+  color: #FFFFFF;
+}
+.resume:hover{
+  color: #000000;
+  background: #FFFFFF;
+  border: 1px solid #000000;
 }
 /* .header h1{
   padding-top: 50px ; 
@@ -72,6 +93,19 @@
 }
 .btnWrapper{
   margin-top: 30px;
+}
+.aboutWrapper{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.aboutContent{
+  margin-top: 50px;
+  font-family: 'Ubuntu', sans-serif;
+  text-decoration: none;
+  width: 50%;
+  font-size: 25px;
+  line-height: 35px;
 }
 .viewWorkBtn{
   height: 50px;
@@ -150,6 +184,22 @@
   .header{
     padding: 10px;
   }
+  .resume{
+    top: 32px;
+    right: 5%;
+    border: 1px solid #FFFFFF;
+    background: #000000;
+    height: 30px;
+    width: 70px;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .aboutContent{
+    line-height: 25px;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 20px;
+  }
   .headerSumary{
     width: 100%;
     /* padding: 10px; */
@@ -182,5 +232,8 @@
   .imgWrapper{
     flex-direction: column;
     align-items: center;
+  }
+  .aboutContent{
+    width: 95%;
   }
 }
