--- a/src/index.css
+++ b/src/index.css
@@ -7,26 +7,22 @@
   padding: 0;
   scroll-behavior: smooth;
 }
-::-webkit-scrollbar {
-  width: 0px !important;
-  background-color: white !important;
+body::-webkit-scrollbar{
+  width: 20px;
+  display: none;
 }
-
-::-webkit-scrollbar-thumb {
-  width: 0px !important;
-  background-color: whitesmoke !important;
-  border-radius: 0px !important;
+body::-webkit-scrollbar-track{
+  background-color: green;
+  border-radius: 100px;
+  margin-block: 1px;
 }
-
-::-webkit-scrollbar:horizontal {
-  width: 0px !important;
-  background-color: white !important;
+body::-webkit-scrollbar-thumb{
+  background-color: hsl(120, 45%, 25%);
+  border-radius: 100px;
+  border: 2px solid green;
 }
-
-::-webkit-scrollbar-thumb:horizontal {
-  width: 0px !important;
-  background-color: whitesmoke !important;
-  border-radius: 0px;
+body::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(120, 15%, 25%);
 }
 .wrapper{
   background: hsl(0, 0%, 0%);
@@ -98,6 +94,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 .aboutContent{
   margin-top: 50px;
@@ -134,9 +131,26 @@
   margin-top: 80px;
   margin-left: 30px;
 }
+.wheel{
+  overflow-x: hidden;
+}
 .imgWrapper{
   display: flex;
   gap: 50px;
+  overflow-x: scroll;
+  scrollbar-width: auto;
+  padding-bottom: 50px;
+}
+.imgWrapper::-webkit-scrollbar {
+  height: 10px;
+  display: none;
+}
+.imgWrapper::-webkit-scrollbar-thumb {
+  background-color: #FFF;
+  border-radius: 100px;
+}
+.imgWrapper::-webkit-scrollbar-track {
+  background-color: #000;
 }
 .imageFrame{
   height: 270px;
