--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body::-webkit-scrollbar-thumb:hover{
 .wrapper{
   background: hsl(0, 0%, 0%);
   height: 100%;
-  padding-bottom: 150px;
+  padding-bottom: 10px;
   color: #FFFFFF;
   width: 100%;
   max-width: 1440px;
@@ -191,6 +191,21 @@ body::-webkit-scrollbar-thumb:hover{
   color: #000000;
   background: #FFFFFF;
   border: 1px solid #000000;
+}
+.links{
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  width: 100%;
+}
+.github,.linkedin{
+  padding: 15px;
+  background-color: transparent;
+  color: #FFF;
+  font-size: 20px;
+  border: 2px solid grey;
+  border-radius: 10px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 @media screen and (max-width:700px) {
