--- a/src/index.css
+++ b/src/index.css
@@ -71,14 +71,22 @@ body::-webkit-scrollbar-thumb:hover{
   font-size: 30px;
   position: absolute;
   top: 60px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
   right: 10%;
   border: 1px solid #FFFFFF;
   background: #000000;
   height: 50px;
-  width: 100px;
+  width: 200px;
   border-radius: 10px;
   transition: all .3s ease;
   color: #FFFFFF;
+}
+.textContainer{
+  display: flex;
+  gap: 15px;
 }
 .resume:hover{
   animation: hithere 1s ease 4;
@@ -100,7 +108,7 @@ body::-webkit-scrollbar-thumb:hover{
   margin-top: 50px;
   font-family: 'Ubuntu', sans-serif;
   text-decoration: none;
-  width: 70%;
+  width: 80%;
   /* border: 3px solid red; */
 }
 .headerSumary h1{
@@ -115,6 +123,17 @@ body::-webkit-scrollbar-thumb:hover{
 }
 .red{
   color: #B13420;
+  border-right: 3px solid #B13420;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 725px;
+  /* animation: typing 1.2s steps(18), cursor .4s step-end infinite alternate; */
+}
+@keyframes cursor {
+  50% { border-color: transparent;}
+}
+@keyframes typing {
+  from { width: 0;}
 }
 .btnWrapper{
   margin-top: 30px;
@@ -222,6 +241,11 @@ body::-webkit-scrollbar-thumb:hover{
   gap: 40px;
   width: 100%;
 }
+.projectText{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 .github,.linkedin{
   padding: 15px;
   background-color: transparent;
@@ -230,6 +254,11 @@ body::-webkit-scrollbar-thumb:hover{
   border: 2px solid grey;
   border-radius: 10px;
   font-family: 'Ubuntu', sans-serif;
+}
+.github:hover, .linkedin:hover{
+  color: #000000;
+  background: #FFFFFF;
+  border: 1px solid #000000;
 }
 @keyframes hithere {
   30% { transform: scale(1.2); }
