--- a/src/index.css
+++ b/src/index.css
@@ -84,10 +84,10 @@ body::-webkit-scrollbar-thumb:hover{
   transition: all .3s ease;
   color: #FFFFFF;
 }
-.textContainer{
+/* .textContainer{
   display: flex;
   gap: 15px;
-}
+} */
 .resume:hover{
   animation: hithere 1s ease 4;
   color: #000000;
@@ -123,7 +123,7 @@ body::-webkit-scrollbar-thumb:hover{
 }
 .red{
   color: #B13420;
-  border-right: 3px solid #B13420;
+  /* border-right: 3px solid #B13420; */
   white-space: nowrap;
   overflow: hidden;
   width: 725px;
